# RAG-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ingestion.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
graph/: __init__.py  graph.py  state.py
graph/chains/: __init__.py  evaluator.py  generator.py  prompts.py
graph/nodes/: __init__.py  evaluate.py  generate.py  retrieve.py
